@@ -376,6 +376,9 @@
 /* Define to 1 if you have the OpenLDAP library. */
 #undef HAVE_LDAP
 
+/* Define if your system has the LIBEDIT libraries. */
+#undef HAVE_LIBEDIT
+
 /* Define to 1 if you have the <libintl.h> header file. */
 #undef HAVE_LIBINTL_H
 
